hard-gists/792634/run.log
=== Docker Run Log for 792634 ===
Started at: Mi 29. Okt 17:22:27 CET 2025

[2025-10-29 17:22:27] START: Running container for 792634
[2025-10-29 17:22:28] SUCCESS: Container e8889f92d93c863ff02dc48b6662197255042d3d19adfe06ab1bba14f24f22ab started for 792634
=== Container logs for 792634 ===
  File "/snippet.py", line 139
    print h
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 792634 ===
[2025-10-29 17:22:30] INFO: Container e8889f92d93c863ff02dc48b6662197255042d3d19adfe06ab1bba14f24f22ab has stopped
